--- a/css/style.css
+++ b/css/style.css
@@ -245,35 +245,52 @@ textarea {
   }
 }
 
-body {
+/*------------------------------------------------------*/
+body{
   margin: 0;
   padding: 0;
-  background-color: #9087c9;
+  background-color: #c0a5db;
 }
 
-#huffman::-webkit-scrollbar,
-.sc::-webkit-scrollbar {
+#huffman::-webkit-scrollbar{
   width: 7px;
   background-color: lightgray;
 }
 
-#huffman::-webkit-scrollbar-thumb,
-.sc::-webkit-scrollbar-thumb {
-  background-color: white;
+#huffman::-webkit-scrollbar-thumb{
+  background-color: gray;
   border-radius: 5px;
 }
 
-#huffman::-webkit-scrollbar:horizontal,
-.sc::-webkit-scrollbar:horizontal {
+#huffman::-webkit-scrollbar:horizontal{
   height: 7px;
 }
 
-#huffman::-webkit-scrollbar-thumb:hover,
-.sc::-webkit-scrollbar-thumb:hover {
+#huffman::-webkit-scrollbar-thumb:hover{
   background-color: rgb(83, 82, 82);
 }
 
-.boxes {
+.sc::-webkit-scrollbar{
+  width: 7px;
+  background-color: lightgray;
+}
+
+.sc::-webkit-scrollbar-thumb{
+  background-color: gray;
+  border-radius: 5px;
+}
+
+.sc::-webkit-scrollbar:horizontal{
+  height: 7px;
+}
+
+.sc::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(83, 82, 82);
+}
+
+
+
+.boxes{
   position: absolute;
   display: block;
   width: 40%;
@@ -281,7 +298,7 @@ body {
   margin-left: 5%;
 }
 
-#paragraph_text {
+#paragraph_text{
   position: relative;
   max-width: 90%;
   max-height: 30%;
@@ -290,24 +307,26 @@ body {
   border: 4px solid black;
   margin-left: 3%;
   margin-top: 2%;
-  font-size: xx-large;
+  font-size:xx-large;
+
 }
 
-#binary,
-#coded {
+#binary{
   position: relative;
   height: 30%;
   width: 90%;
   border: 4px solid black;
   margin-left: 3%;
   overflow: auto;
-  font-size: xx-large;
+  font-size:xx-large;
   line-height: 1.4;
-  transition: width 0.8s, height 0.5s;
+  transition: width 0.8s,height 0.5s;
+
 }
 
-.digit {
-  color: black;
+
+.digit{
+  font-weight: bold;
   position: relative;
   width: 10%;
   left: 95%;
@@ -316,23 +335,35 @@ body {
   justify-content: center;
   align-items: center;
   font-size: x-large;
-  font-weight: bold;
 }
 
-#result {
-  color: black;
+#result{
+  font-weight: bold;
   position: relative;
   width: 10%;
   left: 95%;
   display: flex;
-  justify-content: left;
-  align-items: flex-end;
+  justify-content:left;
+  align-items:flex-end;
   font-size: x-large;
   height: 5px;
-  font-weight: bold;
 }
 
-#freq {
+#coded{
+  position: relative;
+  height: 30%;
+  width: 90%;
+  border: 4px solid black;
+  margin-left: 3%;
+  overflow: auto;
+  font-size:xx-large;
+  line-height: 1.4;
+  transition: width 0.8s,height 0.5s;
+
+
+}
+
+#freq{
   position: absolute;
   width: 40%;
   height: 10%;
@@ -342,33 +373,21 @@ body {
   font-size: large;
   overflow: auto;
   line-height: 2;
-  transition: width 0.8s, height 0.5s;
+  transition: width 0.8s,height 0.5s;
+
 }
 
-#freq_btn,
-#bin_click,
-#code_click {
+#freq_btn{
   position: absolute;
-  width: 100px;
-  height: 50px;
+  width: 80px;
+  height: 40px;
   z-index: 1;
   font-size: large;
+  left: 54%;
+  top: 2%;
 }
 
-#bin_click {
-  margin-left: 3%;
-}
-
-.sc {
-  background-color: antiquewhite;
-}
-
-.link {
-  fill: none;
-  stroke: black;
-}
-
-#huffman {
+#huffman{
   position: absolute;
   border: 4px solid black;
   top: 15%;
@@ -379,17 +398,56 @@ body {
   height: 80%;
   display: flex;
   overflow: auto;
+
+
 }
 
-@media all and (max-width: 1150px) {
-  .boxes {
+svg {
+  position: absolute;
+  width: auto;
+  height: auto;
+}
+
+#bin_click{
+  position: absolute;
+  margin-left: 3%;
+  width: 100px;
+  height: 50px;
+  z-index: 1;
+  font-size: large;
+}
+
+#code_click{
+  position: absolute;
+  margin-left: 3%;
+  width: 100px;
+  height: 50px;
+  z-index: 1;
+  font-size: large;
+}
+
+button{
+  background-color: grey;
+}
+
+.sc{
+  background-color: rgb(255, 255, 255);
+}
+
+.link {
+  fill: none;
+  stroke: black;
+}
+
+@media all and (max-width: 1150px){
+  .boxes{
     position: absolute;
     width: 80%;
     left: 0%;
     align-items: center;
   }
 
-  #huffman {
+  #huffman{
     position: absolute;
     width: 80%;
     height: 80%;
@@ -397,102 +455,106 @@ body {
     left: 10%;
   }
 
-  #freq {
+  #freq{
     width: 80%;
     top: 105%;
     left: 10%;
     height: 100px;
   }
 
-  #freq_btn {
+  #freq_btn{
     top: 105%;
     left: 10%;
   }
 
-  #paragraph_text {
+  #paragraph_text{
     width: 100%;
   }
+
 }
 
-@media all and (max-width: 800px) {
-  .digit {
+@media all and (max-width: 800px){
+
+  .digit{
     position: relative;
     left: 105%;
   }
 
-  #result {
+  #result{
     position: relative;
     left: 100%;
   }
 
-  #huffman {
+  #huffman{
     left: 5%;
   }
 
-  #freq {
+  #freq{
     left: 5%;
   }
 
-  #freq_btn {
+  #freq_btn{
     left: 5%;
   }
+
 }
 
-@media all and (max-width: 700px) {
-  #text_digit {
+@media all and (max-width: 700px){
+  #text_digit{
     left: 180%;
   }
 
-  #binary {
+  #binary{
     width: 165%;
   }
 
-  #coded {
+  #coded{
     width: 165%;
   }
 
-  #freq {
+  #freq{
     width: 140%;
   }
 
-  #encoded_digit {
+  #encoded_digit{
     left: 180%;
   }
 
-  #binary_digit {
+  #binary_digit{
     left: 180%;
   }
 
-  #github {
+  #github{
     display: none;
   }
 }
 
-@media all and (max-width: 540px) {
-  body {
+@media all and (max-width: 540px){
+  body{
     width: 500px;
   }
 
-  .digit {
+
+  .digit{
     left: 150%;
   }
 
-  #result {
+  #result{
     left: 130%;
+
   }
 }
 
-@media all and (max-height: 715px), (max-width: 1000px) {
-  #huffman {
-    top: 150%;
+@media all and (max-height: 715px) , (max-width:1000px){
+  #huffman{
+    top:150%
   }
 
-  #freq {
+  #freq{
     top: 120%;
   }
 
-  #freq_btn {
+  #freq_btn{
     top: 120%;
   }
 }
-
